fix: disable transition for collapsed choice select list

--- a/src/code-blocks/components/ChoiceGroup.css
+++ b/src/code-blocks/components/ChoiceGroup.css
@@ -96,6 +96,10 @@
     }
   }
 
+  .choice-select__list:not([aria-expanded='true']) {
+    transition: none !important;
+  }
+
   .choice-select__option:not(:last-child) {
     box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.1);
   }
